--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@
 # -----------------------------------------------------------------------------
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 BASEPATH=
+# -----------------------------------------------------------------------------
+# Auth
+# -----------------------------------------------------------------------------
+OIDC_TOKEN_URL=
+OIDC_CLIENT_ID=
+OIDC_CLIENT_SECRET=
