--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/material-nextjs": "5.16.4",
     "classnames": "2.5.1",
     "next": "14.2.5",
+    "next-auth": "^4.24.7",
     "react": "18.3.1",
     "react-colorful": "5.6.1",
     "react-dom": "18.3.1",
