--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,13 @@
 # App
 # -----------------------------------------------------------------------------
 NEXT_PUBLIC_APP_URL=http://localhost:3000
-BASEPATH=
+BASEPATH=http://localhost:3000
 # -----------------------------------------------------------------------------
-# Auth
+# Authentication (NextAuth.js)
 # -----------------------------------------------------------------------------
+NEXTAUTH_BASEPATH=${BASEPATH}/api/auth
+NEXTAUTH_URL=http://localhost:3000${BASEPATH}/api/auth
+NEXTAUTH_SECRET=akjshdlsakhj12jhgkkjhgad123
 OIDC_TOKEN_URL=
 OIDC_CLIENT_ID=
 OIDC_CLIENT_SECRET=
