gerekli dil paketleri eklendi

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 # App
 # -----------------------------------------------------------------------------
 NEXT_PUBLIC_APP_URL=http://localhost:3000
-BASEPATH=http://localhost:3000
+BASEPATH=
 # -----------------------------------------------------------------------------
 # Authentication (NextAuth.js)
 # -----------------------------------------------------------------------------
