--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@emotion/react": "11.13.0",
     "@emotion/styled": "11.13.0",
     "@floating-ui/react": "0.26.20",
+    "@formatjs/intl-localematcher": "^0.5.4",
     "@mui/lab": "5.0.0-alpha.172",
     "@mui/material": "5.16.4",
     "@mui/material-nextjs": "5.16.4",
+    "@types/negotiator": "^0.6.3",
     "classnames": "2.5.1",
+    "negotiator": "^0.6.3",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "18.3.1",
